show assignee pic with their name

--- a/task/style.css
+++ b/task/style.css
@@ -243,6 +243,9 @@ footer {
 }
 
 .list-item {
+  display: flex;
+  align-items: center; /* Vertically center the content */
+  justify-content: flex-start; /* Align content to the left */
   text-align: left;
   padding: 1rem 0.5rem;
   font-size: 1rem;
@@ -268,4 +271,11 @@ footer {
 .suggested-users-title {
   text-align: left;
   padding-left: 5px;
+}
+
+.assignee-image {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin: 0 1rem;
 }
